--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   </head>
 
   <body>
-    <h1>Perjantai Portal</h1>
-
+    
+    
+    <div id="content">
+        <h1>Perjantai Portal</h1>
+        <img class="centered" src=" http://25.media.tumblr.com/08e261ea48f1ac01a4225246fc6ada1c/tumblr_mqst7ly7G11sa24tdo1_400.gif">
+        </div>
   </body>
 
 </html>
