--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div id="content">
         <h1>Perjantai Portal</h1>
         <img class="centered" src=" http://25.media.tumblr.com/08e261ea48f1ac01a4225246fc6ada1c/tumblr_mqst7ly7G11sa24tdo1_400.gif">
-        </div>
+	
+	<img class="centered" src="http://assets.diylol.com/hfs/c54/255/ef1/resized/poliisimestari-meme-generator-perjantai-pakko-ottaa-793b07.jpg">
+
+    </div>
   </body>
 
 </html>
